# learn_pytest

./: .pre-commit-config.yaml  README.rst  pyproject.toml  pytest.ini
tests/: test_learn_pytest.py
tests/sportscar/body/: test_body.py
tests/sportscar/engine/: test_engine.py
tests/sportscar/entertainment/: test_entertainment.py
