[tool.poetry]
name = "learn_pytest"
version = "0.1.0"
description = ""
authors = ["Gilbert Adu-Sefah <gilbert@innowatts.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
isort = "^5.1.4"
black = "^19.10b0"
flake8 = "^3.8.3"
seed-isort-config = "^2.2.0"
pre-commit = "^2.6.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.coverage.report]
include = ["learn_pytest/*"]
fail_under = 10
precision = 2
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise",
    "def __repr__",
    "if __name__ == __main__:",
]


[tools.isort]
multi_line_output = 4
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
not_skip = "__init__.py"
line_length = 88
known_third_party = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
